--- a/src/components/configuration/backend/backendUpdate.scss
+++ b/src/components/configuration/backend/backendUpdate.scss
@@ -19,8 +19,8 @@ $row-even: #fff;
 $row-odd: #eee;
 $max-columns: 100;
 
-$defaultBackgroundColor: var(--app-theme-bg-color);
-$defaultColor: var(--app-theme-color);
+$defaultBackgroundColor: var(--az-theme-bg-color);
+$defaultColor: var(--az-theme-color);
 
 .react-responsive-ajax-data-table {
   .biGrid {
@@ -289,7 +289,7 @@ $defaultColor: var(--app-theme-color);
       border-radius: 50%;
       border: 0;
       &:after {
-        content: "";
+        content: '';
         position: absolute;
         display: none;
       }
@@ -318,7 +318,7 @@ $defaultColor: var(--app-theme-color);
     h4,
     h5,
     h6 {
-      color: var(--app-theme-bg-color);
+      color: var(--az-theme-bg-color);
     }
     ol {
       padding-left: 2rem;
@@ -424,7 +424,7 @@ $defaultColor: var(--app-theme-color);
           top: 10px;
           right: 0;
           cursor: pointer;
-          color: var(--app-theme-bg-color);
+          color: var(--az-theme-bg-color);
         }
       }
       .listWrapper {
@@ -460,7 +460,7 @@ $defaultColor: var(--app-theme-color);
     font-size: 15px;
     padding-left: 2px;
   }
-.checkBoxComponent {
+  .checkBoxComponent {
     display: block;
     position: relative;
     padding-left: 2.5rem;
@@ -510,7 +510,7 @@ $defaultColor: var(--app-theme-color);
     border-radius: 3px;
     border: solid 1px $light-grey;
     &:after {
-      content: "";
+      content: '';
       position: absolute;
       display: none;
     }
@@ -579,7 +579,7 @@ $defaultColor: var(--app-theme-color);
       word-break: normal;
       z-index: 1;
       &:after {
-        content: "";
+        content: '';
         position: absolute;
         bottom: -6px;
         left: 0;
@@ -636,8 +636,8 @@ $defaultColor: var(--app-theme-color);
           cursor: pointer;
           text-align: center;
           &.checked {
-            background: var(--app-theme-bg-color);
-            color: var(--app-theme-color);
+            background: var(--az-theme-bg-color);
+            color: var(--az-theme-color);
           }
           .labelValue {
             padding: 0 0.5rem;
@@ -660,7 +660,7 @@ $defaultColor: var(--app-theme-color);
       .react-datetime-picker__inputGroup__divider {
         color: #888;
       }
-      .react-datetime-picker__button{
+      .react-datetime-picker__button {
         svg {
           stroke: $defaultBackgroundColor;
         }
