--- a/src/_style.scss
+++ b/src/_style.scss
@@ -97,6 +97,10 @@ a:focus {
           margin-top: 50px;
         }
       }
+      &.sideMenuLeft,
+      &.sideMenuRight {
+        margin-top: 50px;
+      }
     }
     .mobile-menu {
       display: none;
