Ajax fetch init phase 2

--- a/src/_style.scss
+++ b/src/_style.scss
@@ -1,3 +1,11 @@
+/*
+Owner: awzy.org
+These are parent styles defined by Awzy. 
+You can override them, creating your own styles in _custom.scss
+
+Author: Bharani Palani (barani.potshot@gmail.com)
+
+*/
 .icon-az {
   color: var(--az-theme-bg-color) !important;
 }
