--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,4 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import './style.scss';
+@import './custom.scss';
