--- a/src/_style.scss
+++ b/src/_style.scss
@@ -55,6 +55,7 @@ a:focus {
   height: 40px;
   &.global {
     max-width: 200px;
+    padding: 5px;
   }
   @include view-mobile {
     // margin-top: 50px;
