them change, scss suspense

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,6 @@
 @import './mixins';
 @import '../node_modules/animate.css/animate.min.css';
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
-@import '../node_modules/font-awesome/css/font-awesome.min.css';
+// @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import './style.scss';
 @import './custom.scss';
