--- a/src/style.scss
+++ b/src/style.scss
@@ -75,7 +75,6 @@ a:focus {
 .application-wrapper {
   display: grid;
   grid-template-columns: 100%;
-  margin: 4px auto 0 auto;
   opacity: 0.9;
 
   .application-content {
@@ -132,7 +131,7 @@ a:focus {
       &.sideMenuLeft,
       &.sideMenuRight {
         margin-top: 50px;
-        min-height: calc(100vh - 54px);
+        min-height: calc(100vh - 50px);
       }
     }
 
@@ -439,6 +438,14 @@ a:focus {
   }
   &-light {
     background-color: rgba(var(--bs-white-rgb), 0);
+  }
+  @media (max-width: 767px) {
+    &-dark {
+      background-color: rgba(var(--bs-dark-rgb), 0.9);
+    }
+    &-light {
+      background-color: rgba(var(--bs-white-rgb), 0.9);
+    }
   }
 
   .gIcon {
